[project]
name = "fg-forge-updater"
version = "1.4.0"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ramona T", email = "ramona.t.me@pm.me" }]
urls = { Repository = "https://github.com/bmos/fg_forge_updater" }
dependencies = [
    "beautifulsoup4==4.14.2",
    "markdown==3.9",
    "matplotlib==3.10.6",
    "mdformat-footnote==0.1.2",
    "mdformat-frontmatter==2.0.8",
    "mdformat-gfm==1.0.0",
    "pandas==2.3.3",
    "python-dotenv==1.1.1",
    "requestium==0.4.0",
    "seaborn==0.13.2",
    "selenium==4.38.0",
]

[project.optional-dependencies]
dev = [
    "bandit[sarif]==1.8.6",
    "mypy==1.18.2",
    "pandas-stubs==2.3.2.250926",
    "polyfactory==2.22.4",
    "pre-commit==4.4.0",
    "pytest-xdist==3.8.0",
    "pytest==9.0.0",
    "ruff==0.14.4",
    "types-Markdown==3.9.0.20250906",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-requests==2.32.4.20250611",
    "types-seaborn==0.13.2.20250728",
]
github-actions = [
    "coverage==7.11.3",
    "pytest-cov==7.0.0",
]

[tool.ruff]
line-length = 160
target-version = "py311"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "requestium",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src -n auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
relative_files = true
command_line = "-m pytest"

[tool.coverage.paths]
source = [
    "src/",
]
omit = [
    "tests",
]

[tool.coverage.report]
exclude_also = [
    "logger.",
]
