[project]
name = "fg-forge-updater"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ramona T", email = "ramona.t.me@pm.me" }]
urls = { Repository = "https://github.com/bmos/FG-Forge-Updater" }
dependencies = [
    "beautifulsoup4~=4.14.3",
    "markdown~=3.10",
    "mdformat-footnote~=0.1.2",
    "mdformat-frontmatter~=2.0.8",
    "mdformat-gfm~=1.0.0",
    "patchright~=1.57.2",
    "python-dotenv~=1.2.1",
    "requests~=2.32.5",
]

[project.optional-dependencies]
dev = [
    "bandit[sarif]==1.9.2",
    "mypy~=1.19.0",
    "prek~=0.3.0",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.8.0",
    "pytest~=9.0.2",
    "ruff==0.14.9",
    "ssort==0.16.0",
    "types-Markdown~=3.10.0.20251106",
    "types-beautifulsoup4~=4.12.0.20250516",
    "types-requests~=2.32.4.20250913",
]

[project.scripts]
fg-forge-updater = "src.main:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 160
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins (A)
    "ANN",  # flake8-annotations (ANN)
    "ARG",  # flake8-unused-arguments (ARG)
    "B",  # flake8-bugbear (B)
    "BLE",  # flake8-blind-except (BLE)
    "C4",  # flake8-comprehensions (C4)
    "C90",  # mccabe (C90)
    "D",  # pydocstyle (D)
    "DTZ",  # flake8-datetimez (DTZ)
    "E",  # pycodestyle-error (E)
    "EM",  # flake8-errmsg (EM)
    "EXE",  # flake8-executable (EXE)
    "F",  # Pyflakes (F)
    "FA",  # flake8-future-annotations (FA)
    "FBT",  # flake8-boolean-trap (FBT)
    "FIX",  # flake8-fixme (FIX)
    "G",  # flake8-logging-format (G)
    "I",  # isort (I)
    "ICN",  # flake8-import-conventions (ICN)
    "INP",  # flake8-no-pep420 (INP)
    "INT",  # flake8-gettext (INT)
    "ISC",  # flake8-implicit-str-concat (ISC)
    "LOG",  # flake8-logging (LOG)
    "N",  # pep8-naming (N)
    "PIE",  # flake8-pie (PIE)
    "PL",  # Pylint (PL)
    "PT",  # flake8-pytest-style (PT)
    "PTH",  # flake8-use-pathlib (PTH)
    "Q",  # flake8-quotes (Q)
    "RET",  # flake8-return (RET)
    "RSE",  # flake8-raise (RSE)
    "RUF",  # Ruff-specific rules (RUF)
    "SIM",  # flake8-simplify (SIM)
    "SLF",  # flake8-self (SLF)
    "T10",  # flake8-debugger (T10)
    "T20",  # flake8-print (T20)
    "TC",  # flake8-type-checking (TC)
    "TD",  # flake8-todos (TD)
    "TID",  # flake8-tidy-imports (TID)
    "UP",  # pyupgrade (UP)
    "W",  # pycodestyle-warning (W)
    "YTT",  # flake8-2020 (YTT)
]
ignore = [
    "ANN002",  # missing-type-args (ANN002)
    "ANN003",  # missing-type-kwargs (ANN003)
    "D100",  # undocumented-public-module (D100)
    "D102",  # undocumented-public-method (D102)
    "D103",  # undocumented-public-function (D103)
    "D104",  # undocumented-public-package (D104)
    "D107",  # undocumented-public-init (D107)
    "D203",  # incorrect-blank-line-before-class (D203)
    "D212",  # multi-line-summary-first-line (D212)
    "FIX002",  # line-contains-todo (FIX002)
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "FBT001",  # boolean-type-hint-positional-argument (FBT001)
    "SLF001",  # private-member-access (SLF001)
    "PLR2004",  # magic-value-comparison (PLR2004)
]

[tool.pytest]
addopts = ["-n", "auto", "--cov=src", "--no-cov-on-fail"]
testpaths = [
    "tests",
]

[tool.coverage]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_also = [
    "logger.",
    'if __name__ == "__main__":',
    "main\\(\\)",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "requestium",
]
ignore_missing_imports = true
